--- a/examples/compute_stability_number_of_graph.ipynb
+++ b/examples/compute_stability_number_of_graph.ipynb
@@ -68,12 +68,12 @@
     "\n",
     "println(\"Relaxed order: k=\",k)\n",
     "    \n",
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
     "g=Vector{Polynomial{true,Float64}}([]);\n",
     "\n",
-    "#SpectralPOP.save_data(x,f,g,h,R)\n",
+    "#SpectralSOS.save_data(x,f,g,h,R)\n",
     "    \n"
    ]
   },
@@ -166,11 +166,11 @@
     }
    ],
    "source": [
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
     "\n",
-    "opt_val,opt_sol = SpectralPOP.CTP_POP(x,f,h,k,R;method=\"LMBM\",EigAlg=\"Mix\",tol=1e-5)"
+    "opt_val,opt_sol = SpectralSOS.CTP_POP(x,f,h,k,R;method=\"LMBM\",EigAlg=\"Mix\",tol=1e-5)"
    ]
   },
   {
@@ -207,12 +207,12 @@
     }
    ],
    "source": [
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
     "g=Vector{Polynomial{true,Float64}}([])\n",
     "\n",
-    "opt_val= SpectralPOP.SumofSquares_POP(x,f,g,h,k)"
+    "opt_val= SpectralSOS.SumofSquares_POP(x,f,g,h,k)"
    ]
   },
   {
@@ -323,11 +323,11 @@
     }
    ],
    "source": [
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
     "\n",
-    "opt_val,opt_sol = SpectralPOP.CTP_POP(x,f,h,k,R;method=\"SketchyCGAL\",EigAlg=\"Mix\",tol=1e-3)"
+    "opt_val,opt_sol = SpectralSOS.CTP_POP(x,f,h,k,R;method=\"SketchyCGAL\",EigAlg=\"Mix\",tol=1e-3)"
    ]
   },
   {
