--- a/examples/deciding_convexity.ipynb
+++ b/examples/deciding_convexity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,18 +10,20 @@
      "output_type": "stream",
      "text": [
       "***Problem setting***\n",
-      "Number of variable: n=5\n",
+      "Number of variable: n=2\n",
       "====================\n",
       "Number of equality constraints: l_h=1\n",
       "====================\n",
-      "Relaxed order: k=4\n"
+      "Relaxed order: k=2\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralPOP.\n"
+      "WARNING: replacing module SpectralSOS.\n",
+      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
+      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n"
      ]
     }
    ],
@@ -30,8 +32,8 @@
     "\n",
     "println(\"***Problem setting***\")\n",
     "\n",
-    "n=5\n",
-    "d=4\n",
+    "n=2\n",
+    "d=2\n",
     "\n",
     "println(\"Number of variable: n=\",n)\n",
     "println(\"====================\")\n",
@@ -61,8 +63,8 @@
     "\n",
     "println(\"Relaxed order: k=\",k)\n",
     "    \n",
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
     "g=Vector{Polynomial{true,Float64}}([]);\n",
     "\n",
@@ -72,75 +74,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**SumOfSquares+Mosek:\n"
+      "**SumOfSquares+Mosek:\n",
+      "OPTIMAL\n",
+      "opt_val=-3.0445104704799584\n",
+      "  0.011022 seconds (36.52 k allocations: 4.067 MiB)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralPOP.\n",
-      "WARNING: Force throwing a SIGINT\n"
+      "WARNING: replacing module SpectralSOS.\n",
+      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
+      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-3.0445104704799584"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
     "g=Vector{Polynomial{true,Float64}}([])\n",
     "\n",
-    "opt_val = SpectralPOP.SumofSquares_POP(x,f,g,h,k)"
+    "opt_val = SpectralSOS.SumofSquares_POP(x,f,g,h,k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralPOP.\n"
+      "**Constant trace property (CTP):\n",
+      "**Convert moment relaxation to standard SDP:\n"
      ]
     },
     {
-     "ename": "LoadError",
-     "evalue": "LoadError: InterruptException:\nin expression starting at /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralPOP/solvers/ProximalBundleMethod/ProximalMethod.jl:13",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: InterruptException:\nin expression starting at /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralPOP/solvers/ProximalBundleMethod/ProximalMethod.jl:13",
-      "",
-      "Stacktrace:",
-      " [1] include at ./boot.jl:328 [inlined]",
-      " [2] include_relative(::Module, ::String) at ./loading.jl:1105",
-      " [3] include at ./Base.jl:31 [inlined]",
-      " [4] include(::String) at /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralPOP/src/SpectralPOP.jl:1",
-      " [5] top-level scope at /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralPOP/src/SpectralPOP.jl:14",
-      " [6] include at ./boot.jl:328 [inlined]",
-      " [7] include_relative(::Module, ::String) at ./loading.jl:1105",
-      " [8] include(::Module, ::String) at ./Base.jl:31",
-      " [9] include(::String) at ./client.jl:424",
-      " [10] top-level scope at In[11]:1"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module SpectralSOS.\n",
+      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
+      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n",
+      "WARNING: Compat.norm is deprecated, use LinearAlgebra.norm instead.\n",
+      "  likely near /home/hoanganh/.julia/packages/IJulia/a1SNk/src/kernel.jl:53\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Size of psd matrix: sk=15\n",
+      "  Number of equality trace constraints: m=66\n",
+      "  3.234526 seconds (5.11 M allocations: 252.083 MiB, 3.35% gc time)\n",
+      "**LMBM solver:\n",
+      "---------------\n",
+      "| Parameters: |\n",
+      "---------------\n",
+      "n:       66\n",
+      "maxtime: 300000.000000\n",
+      "na:      2\n",
+      "mcu:     5\n",
+      "mc:      7\n",
+      "rpar: \n",
+      "ipar: \n",
+      "-----------\n",
+      "| Output: |\n",
+      "-----------\n",
+      "Termination:     1\n",
+      "N. iter.:        67\n",
+      "N. func. eval.:  218\n",
+      "Final value:     0.228813\n",
+      "Execution time:  0.377274\n",
+      "  2.293954 seconds (1.30 M allocations: 71.407 MiB, 1.81% gc time)\n",
+      "------------------------------------\n",
+      "**Numerical result:\n",
+      "====================================\n",
+      "opt_val=-3.0445425148730556\n",
+      "====================================\n",
+      "Dimension of the null space of Gram matrix = 2\n",
+      "------------------------------------\n",
+      "atom 1 = [0.12895376368506634, 0.9616578343991495, -0.034615065043110765, -0.2578497427099646]\n",
+      "  check gap of lower bound  = 0.05562720128097354\n",
+      "  check equality constraint 1 = 0.009099556173339796\n",
+      "####################################\n",
+      "Optimal solution: opt_sol = [0.12895376368506634, 0.9616578343991495, -0.034615065043110765, -0.2578497427099646]\n",
+      "####################################\n",
+      "------------------------------------\n",
+      "atom 2 = [-0.1291299159641627, -0.9623749641145384, 0.03471897283643152, 0.2569817705935054]\n",
+      "  check gap of lower bound  = 0.061680812179817135\n",
+      "  check equality constraint 1 = 0.010085144243560773\n",
+      "####################################\n",
+      "Optimal solution: opt_sol = [-0.1291299159641627, -0.9623749641145384, 0.03471897283643152, 0.2569817705935054]\n",
+      "####################################\n",
+      "  0.418757 seconds (525.82 k allocations: 25.946 MiB)\n",
+      "  5.947897 seconds (6.94 M allocations: 349.468 MiB, 2.52% gc time)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(-3.0445425148730556, [-0.1291299159641627, -0.9623749641145384, 0.03471897283643152, 0.2569817705935054])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
     "\n",
-    "opt_val,opt_sol = SpectralPOP.CTP_POP(x,f,h,k,R;method=\"LMBM\",EigAlg=\"Mix\",tol=1e-5,scale=true)"
+    "opt_val,opt_sol = SpectralSOS.CTP_POP(x,f,h,k,R;method=\"LMBM\",EigAlg=\"Mix\",tol=1e-5,scale=true)"
    ]
   },
   {
@@ -152,42 +221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: replacing module SpectralPOP.\n"
-     ]
-    },
-    {
-     "ename": "LoadError",
-     "evalue": "LoadError: InterruptException:\nin expression starting at /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralPOP/solvers/LMBM/LMBM.jl:68",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: InterruptException:\nin expression starting at /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralPOP/solvers/LMBM/LMBM.jl:68",
-      "",
-      "Stacktrace:",
-      " [1] include at ./boot.jl:328 [inlined]",
-      " [2] include_relative(::Module, ::String) at ./loading.jl:1105",
-      " [3] include at ./Base.jl:31 [inlined]",
-      " [4] include(::String) at /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralPOP/src/SpectralPOP.jl:1",
-      " [5] top-level scope at /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralPOP/src/SpectralPOP.jl:12",
-      " [6] include at ./boot.jl:328 [inlined]",
-      " [7] include_relative(::Module, ::String) at ./loading.jl:1105",
-      " [8] include(::Module, ::String) at ./Base.jl:31",
-      " [9] include(::String) at ./client.jl:424",
-      " [10] top-level scope at In[12]:1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "# include(\"../src/SpectralSOS.jl\")\n",
+    "# using .SpectralSOS\n",
     "\n",
-    "SpectralPOP.save_deciding_conv(n,d,c)"
+    "# SpectralPOP.save_deciding_conv(n,d,c)"
    ]
   },
   {
