--- a/examples/test_polynomial_systems_using_LMBM.ipynb
+++ b/examples/test_polynomial_systems_using_LMBM.ipynb
@@ -109,9 +109,9 @@
     "k=2 # relaxed order\n",
     "\n",
     "\n",
-    "using SpectralPOP\n",
+    "using SpectralSOS\n",
     "\n",
-    "sol=SpectralPOP.ASC_PolySys(x,h,k,L,method=\"LMBM\",EigAlg=\"Mix\",tol=1e-5);\n"
+    "sol=SpectralSOS.ASC_PolySys(x,h,k,L,method=\"LMBM\",EigAlg=\"Mix\",tol=1e-5);\n"
    ]
   },
   {
