--- a/examples/deciding_nonnegativity.ipynb
+++ b/examples/deciding_nonnegativity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "***Problem setting***\n",
-      "Number of variable: n=50\n",
+      "Number of variable: n=2\n",
       "====================\n",
       "Number of equality constraints: l_h=1\n",
       "====================\n",
@@ -23,7 +23,7 @@
     "\n",
     "println(\"***Problem setting***\")\n",
     "\n",
-    "n=50\n",
+    "n=2\n",
     "d=2\n",
     "\n",
     "println(\"Number of variable: n=\",n)\n",
@@ -63,14 +63,14 @@
    "source": [
     "# using SparseArrays\n",
     "\n",
-    "# include(\"../src/SpectralPOP.jl\")\n",
-    "# using .SpectralPOP\n",
+    "# include(\"../src/SpectralSOS.jl\")\n",
+    "# using .SpectralSOS\n",
     "\n",
     "\n",
     "\n",
     "# include(\"../examples/densePOPsphere_deg4_var5_nineq0_neq1.jl\")\n",
     "\n",
-    "# x,f,g,h=SpectralPOP.get_POP(n,m,l,lmon_g,supp_g,coe_g,lmon_h,supp_h,coe_h,lmon_f,supp_f,coe_f);\n",
+    "# x,f,g,h=SpectralSOS.get_POP(n,m,l,lmon_g,supp_g,coe_g,lmon_h,supp_h,coe_h,lmon_f,supp_f,coe_f);\n",
     "\n",
     "\n",
     "# k=2"
@@ -78,21 +78,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**SumOfSquares+Mosek:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module SpectralSOS.\n",
+      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
+      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OPTIMAL\n",
+      "opt_val=-1.1010608581903363\n",
+      " 20.659031 seconds (36.95 M allocations: 1.829 GiB, 4.53% gc time)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1.1010608581903363"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# include(\"../src/SpectralPOP.jl\")\n",
-    "# using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
-    "# g=Vector{Polynomial{true,Float64}}([])\n",
+    "g=Vector{Polynomial{true,Float64}}([])\n",
     "\n",
-    "# opt_val = SpectralPOP.SumofSquares_POP(x,f,g,h,k)"
+    "opt_val = SpectralSOS.SumofSquares_POP(x,f,g,h,k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -109,21 +145,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralPOP.\n"
+      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
+      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n",
+      "WARNING: Compat.norm is deprecated, use LinearAlgebra.norm instead.\n",
+      "  likely near /home/hoanganh/.julia/packages/IJulia/a1SNk/src/kernel.jl:53\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Size of psd matrix: sk=1326\n",
-      "  Number of equality trace constraints: m=564877\n",
-      "200.475687 seconds (50.76 M allocations: 15.631 GiB, 1.56% gc time)\n",
+      "  Size of psd matrix: sk=6\n",
+      "  Number of equality trace constraints: m=13\n",
+      "  3.372569 seconds (5.31 M allocations: 262.167 MiB, 4.11% gc time)\n",
       "**LMBM solver:\n",
       "---------------\n",
       "| Parameters: |\n",
       "---------------\n",
-      "n:       564877\n",
+      "n:       13\n",
       "maxtime: 300000.000000\n",
       "na:      2\n",
       "mcu:     5\n",
@@ -134,52 +173,52 @@
       "| Output: |\n",
       "-----------\n",
       "Termination:     2\n",
-      "N. iter.:        125\n",
-      "N. func. eval.:  207\n",
-      "Final value:     0.193259\n",
-      "Execution time:  125.721436\n",
-      " 48.334839 seconds (1.34 M allocations: 8.337 GiB, 0.25% gc time)\n",
+      "N. iter.:        81\n",
+      "N. func. eval.:  128\n",
+      "Final value:     0.188028\n",
+      "Execution time:  0.443703\n",
+      "  2.301924 seconds (1.28 M allocations: 68.255 MiB, 1.43% gc time)\n",
       "------------------------------------\n",
       "**Numerical result:\n",
       "====================================\n",
-      "opt_val=-105.53204074902204\n",
+      "opt_val=-1.1010608677768081\n",
       "====================================\n",
       "Dimension of the null space of Gram matrix = 2\n",
       "------------------------------------\n",
-      "atom 1 = [0.14191005373726479, 0.14146361244630856, 0.14122178415310127, 0.14117463914070838, 0.14113824596289407, 0.14162887223208745, 0.14133786941970092, 0.1414820076631808, 0.14137201352350107, 0.14101775253379442, 0.14055901812173854, 0.14154705538286405, 0.14191368944583643, 0.14150166332260092, 0.14165823918817616, 0.14106886178766467, 0.14153418145787142, 0.14152548355026376, 0.141717829369702, 0.14172856059986252, 0.14132306546839882, 0.14166259269205553, 0.14185529408705658, 0.14130247992563846, 0.14148886171789546, 0.14059876037838953, 0.1422633533424981, 0.1415247500382087, 0.14124201599517602, 0.14142412392085135, 0.1415615807777243, 0.141517295422538, 0.1413076378207891, 0.14095573079977125, 0.14210276252765494, 0.14119119702133806, 0.1415265674969712, 0.14116582732475874, 0.14076362968666886, 0.14116169954339905, 0.14130387340235434, 0.14155714093065774, 0.14094992718692304, 0.1412434269153202, 0.1415829317636258, 0.14123729971192897, 0.14168387858017467, 0.1413251204337111, 0.1417970015391509, 0.1414535170281162]\n",
-      "  check gap of lower bound  = 0.028237530435333724\n",
-      "  check equality constraint 1 = 0.00013379440949046195\n",
+      "atom 1 = [0.9802574426077388, 0.19799516533673328]\n",
+      "  check gap of lower bound  = 0.0002350268809321321\n",
+      "  check equality constraint 1 = 0.00010673928458482251\n",
       "####################################\n",
-      "Optimal solution: opt_sol = [0.14191005373726479, 0.14146361244630856, 0.14122178415310127, 0.14117463914070838, 0.14113824596289407, 0.14162887223208745, 0.14133786941970092, 0.1414820076631808, 0.14137201352350107, 0.14101775253379442, 0.14055901812173854, 0.14154705538286405, 0.14191368944583643, 0.14150166332260092, 0.14165823918817616, 0.14106886178766467, 0.14153418145787142, 0.14152548355026376, 0.141717829369702, 0.14172856059986252, 0.14132306546839882, 0.14166259269205553, 0.14185529408705658, 0.14130247992563846, 0.14148886171789546, 0.14059876037838953, 0.1422633533424981, 0.1415247500382087, 0.14124201599517602, 0.14142412392085135, 0.1415615807777243, 0.141517295422538, 0.1413076378207891, 0.14095573079977125, 0.14210276252765494, 0.14119119702133806, 0.1415265674969712, 0.14116582732475874, 0.14076362968666886, 0.14116169954339905, 0.14130387340235434, 0.14155714093065774, 0.14094992718692304, 0.1412434269153202, 0.1415829317636258, 0.14123729971192897, 0.14168387858017467, 0.1413251204337111, 0.1417970015391509, 0.1414535170281162]\n",
+      "Optimal solution: opt_sol = [0.9802574426077388, 0.19799516533673328]\n",
       "####################################\n",
       "------------------------------------\n",
-      "atom 2 = [-0.14192131507763092, -0.1414682236777195, -0.1412266765837454, -0.1411795692046896, -0.14114307993166775, -0.14163359784740326, -0.14134196110785172, -0.14148559183185536, -0.1413752080457299, -0.1410199902408662, -0.14056080435153623, -0.14154797128629157, -0.14191365893096816, -0.1415010602096867, -0.1416573736580168, -0.1410676300924569, -0.1415325248069119, -0.14152423177906823, -0.14171652873995358, -0.14172809652457513, -0.14132345303920868, -0.14166383008119637, -0.1418576826037316, -0.14130573135012478, -0.1414933184310595, -0.14060404891559872, -0.142269895103215, -0.14153209112336024, -0.14125085395130177, -0.1414335773768105, -0.1415725934498342, -0.1415277391079964, -0.14131897833476179, -0.14096637204218854, -0.14211360532012277, -0.141201953199281, -0.14153674923582135, -0.14117614252285385, -0.1407735779123696, -0.14117109691606458, -0.14131227459164528, -0.1415644158290399, -0.14095667125719435, -0.14124980610363835, -0.14158895797824825, -0.1412427497179229, -0.14168827520705385, -0.14132932237017193, -0.14180142878203855, -0.1414563753393131]\n",
-      "  check gap of lower bound  = 0.01308631672610261\n",
-      "  check equality constraint 1 = 6.200247625653965e-5\n",
+      "atom 2 = [-0.9805451360569106, -0.19790680788834863]\n",
+      "  check gap of lower bound  = 0.0014006950023517373\n",
+      "  check equality constraint 1 = 0.0006358684534211179\n",
       "####################################\n",
-      "Optimal solution: opt_sol = [-0.14192131507763092, -0.1414682236777195, -0.1412266765837454, -0.1411795692046896, -0.14114307993166775, -0.14163359784740326, -0.14134196110785172, -0.14148559183185536, -0.1413752080457299, -0.1410199902408662, -0.14056080435153623, -0.14154797128629157, -0.14191365893096816, -0.1415010602096867, -0.1416573736580168, -0.1410676300924569, -0.1415325248069119, -0.14152423177906823, -0.14171652873995358, -0.14172809652457513, -0.14132345303920868, -0.14166383008119637, -0.1418576826037316, -0.14130573135012478, -0.1414933184310595, -0.14060404891559872, -0.142269895103215, -0.14153209112336024, -0.14125085395130177, -0.1414335773768105, -0.1415725934498342, -0.1415277391079964, -0.14131897833476179, -0.14096637204218854, -0.14211360532012277, -0.141201953199281, -0.14153674923582135, -0.14117614252285385, -0.1407735779123696, -0.14117109691606458, -0.14131227459164528, -0.1415644158290399, -0.14095667125719435, -0.14124980610363835, -0.14158895797824825, -0.1412427497179229, -0.14168827520705385, -0.14132932237017193, -0.14180142878203855, -0.1414563753393131]\n",
+      "Optimal solution: opt_sol = [-0.9805451360569106, -0.19790680788834863]\n",
       "####################################\n",
-      "  1.640548 seconds (45.84 k allocations: 160.349 MiB)\n",
-      "250.452010 seconds (52.15 M allocations: 24.125 GiB, 1.30% gc time)\n"
+      "  0.424250 seconds (525.13 k allocations: 25.902 MiB)\n",
+      "  6.227471 seconds (7.27 M allocations: 363.581 MiB, 2.76% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-105.53204074902204, [-0.14192131507763092, -0.1414682236777195, -0.1412266765837454, -0.1411795692046896, -0.14114307993166775, -0.14163359784740326, -0.14134196110785172, -0.14148559183185536, -0.1413752080457299, -0.1410199902408662  …  -0.14131227459164528, -0.1415644158290399, -0.14095667125719435, -0.14124980610363835, -0.14158895797824825, -0.1412427497179229, -0.14168827520705385, -0.14132932237017193, -0.14180142878203855, -0.1414563753393131])"
+       "(-1.1010608677768081, [-0.9805451360569106, -0.19790680788834863])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
     "\n",
-    "opt_val,opt_sol = SpectralPOP.CTP_POP(x,f,h,k,R;method=\"LMBM\",EigAlg=\"Mix\",tol=1e-5,scale=true)"
+    "opt_val,opt_sol = SpectralSOS.CTP_POP(x,f,h,k,R;method=\"LMBM\",EigAlg=\"Mix\",tol=1e-5,scale=true)"
    ]
   },
   {
@@ -203,10 +242,10 @@
     }
    ],
    "source": [
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "# include(\"../src/SpectralSOS.jl\")\n",
+    "# using .SpectralSOS\n",
     "\n",
-    "SpectralPOP.save_deciding_nonneg(n,d,c)"
+    "# SpectralSOS.save_deciding_nonneg(n,d,c)"
    ]
   },
   {
