--- a/examples/test_random_dense_equality_constrained_QCQP_on_sphere_first_order.ipynb
+++ b/examples/test_random_dense_equality_constrained_QCQP_on_sphere_first_order.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "***Problem setting***\n",
-      "Number of variable: n=50\n",
+      "Number of variable: n=2\n",
       "====================\n",
-      "Number of equality constraints: l_h=14\n",
+      "Number of equality constraints: l_h=2\n",
       "====================\n",
       "Relaxed order: k=1\n"
      ]
@@ -23,7 +23,7 @@
     "\n",
     "println(\"***Problem setting***\")\n",
     "\n",
-    "n=50\n",
+    "n=2\n",
     "\n",
     "#N=[50;60;70;80;100;120;150;200;300;400]\n",
     "\n",
@@ -74,24 +74,25 @@
     "println(\"Relaxed order: k=\",k)\n",
     "\n",
     "\n",
-    "# include(\"../src/SpectralPOP.jl\")\n",
-    "# using .SpectralPOP\n",
+    "# include(\"../src/SpectraSOS.jl\")\n",
+    "# using .SpectralSOS\n",
     "\n",
     "# g=Vector{Polynomial{true,Float64}}([])\n",
     "\n",
-    "# SpectralPOP.save_data(x,f,g,h,R)"
+    "# SpectralSOS.save_data(x,f,g,h,R)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralPOP.\n"
+      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
+      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n"
      ]
     },
     {
@@ -100,7 +101,7 @@
        "1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,14 +109,14 @@
    "source": [
     "using SparseArrays\n",
     "\n",
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
     "\n",
     "data=\"/home/hoanganh/Desktop/math-topics/SpectralPOP/codes/dataPOP\"\n",
     "include(data*\"/densePOPsphere_deg2_var50_nineq0_neq14.jl\")\n",
     "\n",
-    "x,f,g,h=SpectralPOP.get_POP(n,m,l,lmon_g,supp_g,coe_g,lmon_h,supp_h,coe_h,lmon_f,supp_f,coe_f);\n",
+    "x,f,g,h=SpectralSOS.get_POP(n,m,l,lmon_g,supp_g,coe_g,lmon_h,supp_h,coe_h,lmon_f,supp_f,coe_f);\n",
     "\n",
     "\n",
     "k=1"
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +138,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralPOP.\n"
+      "WARNING: replacing module SpectralSOS.\n",
+      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
+      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n"
      ]
     },
     {
@@ -146,7 +149,7 @@
      "text": [
       "OPTIMAL\n",
       "opt_val=-4.26516473506338\n",
-      "  0.458941 seconds (830.02 k allocations: 106.505 MiB, 4.65% gc time)\n"
+      " 24.782780 seconds (38.00 M allocations: 1.943 GiB, 5.21% gc time)\n"
      ]
     },
     {
@@ -155,22 +158,22 @@
        "-4.26516473506338"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
     "g=Vector{Polynomial{true,Float64}}([])\n",
-    "opt_val = SpectralPOP.SumofSquares_POP(x,f,g,h,k) # SumOfSquares.jl + Mosek"
+    "opt_val = SpectralSOS.SumofSquares_POP(x,f,g,h,k) # SumOfSquares.jl + Mosek"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,23 +181,27 @@
      "output_type": "stream",
      "text": [
       "**Constant trace property (CTP):\n",
-      "**Convert moment relaxation to standard SDP:\n",
-      "  Size of psd matrix: sk=51\n",
-      "  Number of equality trace constraints: m=15\n"
+      "**Convert moment relaxation to standard SDP:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralPOP.\n"
+      "WARNING: replacing module SpectralSOS.\n",
+      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
+      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n",
+      "WARNING: Compat.norm is deprecated, use LinearAlgebra.norm instead.\n",
+      "  likely near /home/hoanganh/.julia/packages/IJulia/a1SNk/src/kernel.jl:53\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.183124 seconds (1.31 M allocations: 167.556 MiB, 14.56% gc time)\n",
+      "  Size of psd matrix: sk=51\n",
+      "  Number of equality trace constraints: m=15\n",
+      "  3.877711 seconds (6.42 M allocations: 419.185 MiB, 7.93% gc time)\n",
       "**LMBM solver:\n",
       "---------------\n",
       "| Parameters: |\n",
@@ -211,36 +218,36 @@
       "-----------\n",
       "Termination:     1\n",
       "N. iter.:        115\n",
-      "N. func. eval.:  277\n",
+      "N. func. eval.:  278\n",
       "Final value:     0.196681\n",
-      "Execution time:  0.201477\n",
-      "  0.847013 seconds (847.92 k allocations: 68.339 MiB, 1.15% gc time)\n",
+      "Execution time:  0.830429\n",
+      "  3.186755 seconds (1.40 M allocations: 96.292 MiB, 1.20% gc time)\n",
       "------------------------------------\n",
       "**Numerical result:\n",
       "====================================\n",
-      "opt_val=-4.265165242277361\n",
+      "opt_val=-4.26516523445418\n",
       "====================================\n",
       "Dimension of the null space of Gram matrix = 2\n",
-      "  0.009871 seconds (681 allocations: 299.094 KiB)\n",
-      "  1.040536 seconds (2.16 M allocations: 236.229 MiB, 3.50% gc time)\n"
+      "  0.010054 seconds (820 allocations: 307.234 KiB)\n",
+      "  7.082740 seconds (7.82 M allocations: 515.849 MiB, 4.88% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-4.265165242277361, Array{Float64,1}[])"
+       "(-4.26516523445418, Array{Float64,1}[])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP \n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
-    "opt_val,opt_sol = SpectralPOP.CTP_POP(x,f,h,k,R;method=\"LMBM\",EigAlg=\"Mix\",tol=1e-5,scale=true) #Limited memory bundle method"
+    "opt_val,opt_sol = SpectralSOS.CTP_POP(x,f,h,k,R;method=\"LMBM\",EigAlg=\"Mix\",tol=1e-5,scale=true) #Limited memory bundle method"
    ]
   },
   {
@@ -252,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -271,84 +278,88 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: replacing module SpectralPOP.\n"
+      "WARNING: replacing module SpectralSOS.\n",
+      "WARNING: Compat.Printf is deprecated, use Printf instead.\n",
+      "  likely near /home/hoanganh/Desktop/math-topics/SpectralPOP/codes/SpectralSOS/solvers/ProximalBundleMethod/ProximalMethod.jl:389\n",
+      "WARNING: Compat.norm is deprecated, use LinearAlgebra.norm instead.\n",
+      "  likely near /home/hoanganh/.julia/packages/IJulia/a1SNk/src/kernel.jl:53\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.183769 seconds (1.31 M allocations: 167.556 MiB, 14.06% gc time)\n",
+      "  0.275088 seconds (1.31 M allocations: 167.556 MiB, 13.88% gc time)\n",
       "**SketchyCGAL solver:\n",
       "- SketchyCGAL SDP Solver - Beta.V.0.0\n",
       "--------------------------\n",
       " iter=1 \n",
-      " stopObj=0.472076144178717 \n",
+      " stopObj=0.4438876109713039 \n",
       " stopFeas=0.4328368822318199 \n",
-      " primalObj=-0.17914469118772103 \n",
+      " primalObj=-0.1584469637869582 \n",
       "--------------------------\n",
       " iter=2 \n",
-      " stopObj=0.525491776060025 \n",
-      " stopFeas=0.3343211796294733 \n",
-      " primalObj=-0.19672308416849518 \n",
+      " stopObj=0.5580318599693904 \n",
+      " stopFeas=0.3215567774873431 \n",
+      " primalObj=-0.2365851424928231 \n",
       "--------------------------\n",
       " iter=4 \n",
-      " stopObj=0.18581841668836316 \n",
-      " stopFeas=0.08473856556451204 \n",
-      " primalObj=-0.2367591325408582 \n",
+      " stopObj=0.054059922474177624 \n",
+      " stopFeas=0.10058352437031498 \n",
+      " primalObj=-0.24508026191119062 \n",
       "--------------------------\n",
       " iter=8 \n",
-      " stopObj=-0.005773686112227117 \n",
-      " stopFeas=0.05160515468350159 \n",
-      " primalObj=-0.2188504103556892 \n",
+      " stopObj=-0.017411878293389527 \n",
+      " stopFeas=0.06297413656626959 \n",
+      " primalObj=-0.22015757211568585 \n",
       "--------------------------\n",
       " iter=16 \n",
-      " stopObj=-0.0007365403539156268 \n",
-      " stopFeas=0.0389754713397328 \n",
-      " primalObj=-0.19979040832591555 \n",
+      " stopObj=-0.04764343234956364 \n",
+      " stopFeas=0.028980137039966682 \n",
+      " primalObj=-0.20665712665344455 \n",
       "--------------------------\n",
       " iter=32 \n",
-      " stopObj=0.00230634154806153 \n",
-      " stopFeas=0.013596464128740902 \n",
-      " primalObj=-0.19315770760700024 \n",
+      " stopObj=0.012939680736132497 \n",
+      " stopFeas=0.009402599005073922 \n",
+      " primalObj=-0.1921939177103098 \n",
       "--------------------------\n",
       " iter=64 \n",
-      " stopObj=0.012392275143907783 \n",
-      " stopFeas=0.0035782499573737137 \n",
-      " primalObj=-0.18908644956735354 \n",
+      " stopObj=0.024333707178094854 \n",
+      " stopFeas=0.005708985831703279 \n",
+      " primalObj=-0.19037657794465332 \n",
       "--------------------------\n",
       " iter=128 \n",
-      " stopObj=0.007872051244237732 \n",
-      " stopFeas=0.001310505059797086 \n",
-      " primalObj=-0.1933506181106142 \n",
+      " stopObj=0.003549758168459649 \n",
+      " stopFeas=0.002138230438158396 \n",
+      " primalObj=-0.19285392954742173 \n",
       "* status = stopping criteria met\n",
-      "  0.922962 seconds (668.84 k allocations: 973.005 MiB, 7.84% gc time)\n",
+      "  2.850724 seconds (4.32 M allocations: 1.175 GiB, 4.97% gc time)\n",
       "------------------------------------\n",
       "**Numerical result:\n",
       "====================================\n",
-      "opt_val=-4.2451136323766425\n",
+      "opt_val=-4.227364901558725\n",
       "====================================\n",
       "Rank of moment matrix = 51\n",
-      "  0.000099 seconds (174 allocations: 135.656 KiB)\n",
-      "  1.107431 seconds (1.98 M allocations: 1.114 GiB, 8.87% gc time)\n"
+      "  0.005175 seconds (503 allocations: 155.094 KiB)\n",
+      "  3.131798 seconds (5.64 M allocations: 1.339 GiB, 5.74% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-4.2451136323766425, Array{Float64,1}[])"
+       "(-4.227364901558725, Array{Float64,1}[])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
-    "opt_val,opt_sol = SpectralPOP.CTP_POP(x,f,h,k,R;method=\"SketchyCGAL\",EigAlg=\"Normal\",tol=1e-3,scale=true)"
+    "opt_val,opt_sol = SpectralSOS.CTP_POP(x,f,h,k,R;method=\"SketchyCGAL\",EigAlg=\"Normal\",tol=1e-3,scale=true)"
    ]
   },
   {
@@ -372,12 +383,12 @@
     }
    ],
    "source": [
-    "include(\"../src/SpectralPOP.jl\")\n",
-    "using .SpectralPOP\n",
+    "include(\"../src/SpectralSOS.jl\")\n",
+    "using .SpectralSOS\n",
     "\n",
     "g=Vector{Polynomial{true,Float64}}([])\n",
     "\n",
-    "SpectralPOP.save_data(x,f,g,h,R)"
+    "SpectralSOS.save_data(x,f,g,h,R)"
    ]
   },
   {
